tests/transpiler/x/zig/if_then_else.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/if_then_else.zig:7:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/if_then_else.zig:4:15: note: function cannot return an error
