tests/transpiler/x/zig/if_then_else.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    const x = 12;
    const msg = if (x > 10) "yes" else "no";
    try std.io.getStdOut().writer().print("{any}\n", .{msg});
}
